# Datalake_Serverless_AWS

./: .gitignore  README.md  producer.py  pyproject.toml
Doc/: producer.md
